--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
 </head>
 <body>
   <main>   
+    <section class="text-center">
+        <h1><time>00:00:00</time></h1>
+        <button id="strt">Comenzar</button>
+        <button id="stp">Detener</button>
+        <button id="rst">reiniciar</button>
+    </section>
   </main>
     <footer class="bg-dark text-white text-center py-4">
       <p>&copy; Todos los derechos reservados</p>
