--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <Title>Ejercicio 5</Title>
 </head>
 <body>
-  <main>   
+  <main class="text-bg-danger p-3">   
     <section class="text-center">
         <h1><time>00:00:00</time></h1>
         <button id="strt">Comenzar</button>
